@@ -1,3 +1,10 @@
+2009-08-08  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-class.php, wp-scorerender.php, scorerender-class.php:
+	- Completely remove any variables and admin options to check maximum
+	  length of music fragment. This number is not useful against abuse
+	  nor eases resource usage.
+
 2009-08-07  Abel Cheung  <abelcheung@gmail.com>
 
 	* *.php, notation/*.php:
